fixed mobile overflow CSS

--- a/main.css
+++ b/main.css
@@ -24,12 +24,8 @@ html,
 body {
     width: 100%;
     height: 100%;
-    overflow: hidden;
     background-color: rgb(255, 255, 255);
     text-align: center;
-    overflow-x :hidden; 
-    overflow-y :hidden; 
-
 
 }
 
@@ -41,6 +37,8 @@ body {
 }
 
 #container {
+    width: 100%;
+    height: 100%;
     position: block;
     z-index: -5;
 }
@@ -238,7 +236,7 @@ a {
 
 #message-container {
     gap: 20px;
-    height: 600px;
+    height: 415px;
     width: 500px;
     display: flex;
     flex-direction: column;
@@ -566,13 +564,13 @@ transform: translateY(-1px);
         font-weight: 400;
         display: flex;
         position: absolute;
-        bottom: -20px;
+        bottom: 3%;
         width: 100%;
         justify-content: left;
         align-items: center;
         gap: 20px;
-        height: 100px;
-    }
+        height: 0px;
+}
 
     #bottom-buttons-bro {
         padding-left: 30px;
@@ -590,12 +588,12 @@ transform: translateY(-1px);
         font-weight: 400;
         display: flex;
         position: absolute;
-        bottom: -20px;
+        bottom: 3%;
         width: 100%;
         justify-content: center;
         align-items: center;
-        height: 100px;
-    }
+        height: 0px;
+}
 
     #bottom-buttons-bro {
         gap: 30px;
@@ -607,7 +605,7 @@ transform: translateY(-1px);
 
 @media screen and (max-width: 480px) {
     #message {
-        top: 25%;
+        top: 15%;
     }
     #message-container {
         width: 328px;
@@ -651,7 +649,9 @@ transform: translateY(-1px);
 @media screen and (min-width: 480px) {
     #message-container {
       width: 500px;
+      height: 500px;
     }
+
 }
 
 #mobile-nav {
